--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             
             <div class="form-group">
                 <label>Total Nilai Tanah & Bangunan (Otomatis dari Tabel Harta)</label>
-                <input type="text" id="displayProperti" value="Rp 0" disabled style="background-color: #eee;">
+                <input type="text" id="displayProperti" value="Rp 0" disabled style="background-color: auto;">
             </div>
 
             <div class="form-group">
